--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,27 +1,4 @@
-repository_type: pipeline
-
-nf_core_version: 3.2.0
-
 lint:
-  files_unchanged:
-    - CODE_OF_CONDUCT.md
-    - assets/nf-core-sampletracking_logo_light.png
-    - docs/images/nf-core-sampletracking_logo_light.png
-    - docs/images/nf-core-sampletracking_logo_dark.png
-    - .github/ISSUE_TEMPLATE/bug_report.yml
-    - .github/CONTRIBUTING.md
-    - .github/PULL_REQUEST_TEMPLATE.md
-    - assets/email_template.txt
-    - docs/README.md
-  nextflow_config:
-    - manifest.name
-    - manifest.homePage
-    - validation.help.beforeText
-    - validation.help.afterText
-    - validation.summary.beforeText
-    - validation.summary.afterText
-  multiqc_config:
-    - report_comment
   files_exist:
     - CODE_OF_CONDUCT.md
     - assets/nf-core-sampletracking_logo_light.png
@@ -30,14 +7,20 @@ lint:
     - .github/ISSUE_TEMPLATE/config.yml
     - .github/workflows/awstest.yml
     - .github/workflows/awsfulltest.yml
-
+  files_unchanged:
+    - CODE_OF_CONDUCT.md
+    - assets/nf-core-sampletracking_logo_light.png
+    - docs/images/nf-core-sampletracking_logo_light.png
+    - docs/images/nf-core-sampletracking_logo_dark.png
+    - .github/workflows/linting.yml
+    - .gitignore
+  multiqc_config:
+    - report_comment
+  nextflow_config:
+    - manifest.name
+    - manifest.homePage
+repository_type: pipeline
 template:
-  org: nf-cmgg
-  name: sampletracking
-  description: CMGG Sampletracking workflow
-  author: CMGG IT
-  version: 1.0.0
-  force: true
-  outdir: ./sampletracking
-  skip_features: []
-  is_nfcore: false
+  prefix: nf-cmgg
+  skip:
+    - igenomes
